fix broken layout for single posts

--- a/wp-content/themes/opendata-wp/assets/scss/templates/_single-post.scss
+++ b/wp-content/themes/opendata-wp/assets/scss/templates/_single-post.scss
@@ -8,7 +8,8 @@
     }
 
     @include breakpoint(medium) {
-      @include grid-column(8);
+      @include grid-column(9);
+      @include grid-col-pos(3);
     }
   }
 
